# MarketRadar

./: .env.example  .gitignore  Cargo.toml  DESIGN.md  README.md  docker-compose.yml  handoff.md  pyproject.toml
.tasks/: 2026-06-03-tauri-automation-readiness.md  2026-06-06-agentic-paper-manager.md  2026-06-06-tauri-trading-workbench.md  2026-06-06-trading-platform-foundation.md
apps/api/: __init__.py  main.py
apps/dashboard/: Home.py  access.py
apps/radar-desktop/: Cargo.toml  tauri.conf.json
apps/radar-desktop/frontend/: app.js  index.html  styles.css
apps/radar-desktop/src/: main.rs
apps/worker/: main.py
config/: theme_peers.yaml  themes.yaml
crates/radar-tui/: Cargo.toml
data/sample/: daily_bars.csv  (+3 more)
docs/: Catalyst_Radar_Review_Brief.html  Catalyst_Radar_v1.1.1_Architecture_Spec.md  Catalyst_Radar_v1.1.1_Engineering_Spec.md  dashboard-feature-inventory.md  phase-1-review.md  phase-10-review.md  phase-11-review.md  phase-12-review.md  phase-13-review.md  phase-14-review.md  phase-15-review.md  phase-2-review.md  phase-3-review.md  phase-4-review.md  phase-5-review.md  phase-6-review.md  phase-7-review.md  phase-8-review.md  phase-9-review.md
scripts/: assert-investable-readiness.ps1  check-live-activation.ps1  debug-dashboard-e2e.ps1  export-operator-evidence.ps1  export-pr-ledger.ps1  export-telemetry.ps1  install-dashboard-profile.ps1  market-radar-status.ps1  open-live-env.ps1  prepare-live-env.ps1  refresh-csv-market-data.ps1  restart-local.ps1  run-dashboard-tui.ps1  run-first-live-smoke.ps1  run-full-market-scan.ps1  run-worker-once.ps1
(+366 files in other folders)
